# pytorch-devcontainer-template

./: LICENSE  README.md  pyproject.toml  test-notebook.ipynb
.devcontainer/: Dockerfile  devcontainer.json
